hphp/test/quick/redeclared_class_a.php.expectf
string(5) "hello"

Fatal error: Class already declared: X in %s on line 3
